<resources>
    <string name="app_name">Mobil</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="email">Email</string>
    <string name="password_again">Password again</string>
    <string name="cancel">Cancel</string>
    <string name="height">Height (Centimeter)</string>
    <string name="weight">Weight (Kg)</string>
</resources>